# IOT-Network-Aggregator

./: .gitignore  API_KEYS.csv  API_KEYS.sqlite3  Cargo.toml  PROTOCOL.md  PROTOCOLV2.md  README.md  TODO.md  config.json  diagram.drawio  resources.md
dbs/: 12.db  2432453235.db  245321.db  252435.db  32.db  424352.db  43232532.db  device_catalog.db
iot_network/: Cargo.toml
iot_network/src/: device.rs
src/: build.rs  config.rs  database.rs  database_handler.rs  db.rs  dbs_hoster.rs  device.rs  device_catalog.rs  devices.rs  main.rs  parser.rs  server.rs
src/aggregator/: connection.rs  mod.rs  server.rs
src/aggregator/messages/: mod.rs  profile_msg.rs
src/api/: database_file_server.rs  handlers.rs  init.rs  mod.rs  security.rs
src/api/handlers/: inputs.rs  sensors.rs
src/api/security/: mod.rs  token.rs
src/database/: api_keys_sqlite.rs  catalog_database.rs  database.rs  database_handler.rs  device_catalog.rs  device_database.rs  error.rs  mod.rs  tables.rs  types.rs  util.rs
src/database/device_dbs/: entry.rs  mod.rs  services.rs
src/database/devices_db/: mod.rs  services.rs
src/devices/: db.rs  devices.rs  inputs.rs  mod.rs  sensors.rs
src/handlers/: devices.rs  errors.rs  mod.rs  security.rs
src/handlers/devices/: inputs.rs  sensors.rs
src/message/: mod.rs  msg_types.rs
src/message/parser/: connect.rs  mod.rs  update.rs
src/messages/: mod.rs  update_msg.rs
src/parser/: device_profile.rs
