[package]
name = "iot_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }

[package.metadata]
# Specify files to ignore using glob patterns
# For example, ignore compiled files and directories
gitignore = [
    "target/",
    "*.rs.bk",
    "*.swp",
    "*.d",
    "*.o",
    "*.rmeta",
]
