[package]
name = "iot_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = "1.37.0"
local-ip-address = "0.6.1"
