[package]
name = "iot_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6.1"
strum = "0.26.2"
strum_macros = "0.26.2"
chrono = "0.4.37"
actix-web = "4.5.1"
actix-files = "0.6.5"
rsa = "0.9.6"
derive_more = "0.99.17"
